--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 				<li>&#183; Under <a href="/AccountInformationView">Account details</a> enter you Costco Membership number and verify your membership.</li>
 			<li>&#183; Under <a href="/AddressBookDisplayView">Address Book</a>, set up a default billing address.</li>
 				<li>&#183; Also under <a href="/AddressBookDisplayView">Address Book</a>, set up a default shipping address.</li>
-				<li>&#183; Under <a href="/PaymentMethodDisplayView">Payment Methods</a>, set up a stored payment method</li>
+				<li>&#183; Under <a href="/PaymentMethodDisplayView">Payment Methods</a>, set up a stored payment method.</li>
 				</ul>
-				<br>	
+					
 		</div>
 		
 		
