update landing page with Heidi's edits and new header image to match branding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	
 	
 	
-	
 <!-- Express Checkout START -->	
 	<style>
 		.express-hero {
@@ -39,28 +38,19 @@
 	
 	<div class="row express-hero">
 		<div class="col-xs-6 col-xs-offset-3 text-center">
-		<h1><strong>Use Express Checkout to</strong><br>Quickly Place Orders Online!</h1>
+		<h1><img src="https://mobilecontent.costco.com/live/resource/img/bd-expresscheckout/expresscheckout-web.svg" alt="Use Express Checkout toQuickly Place Orders Online!"></h1>
 		</div>
 		</div>
 		<div class="row express-about">
-			<!--<div class="col-sm-12 col-md-6">
-		<h2>About Express Checkout</h2>
-			<p>If <strong>Express Checkout</strong> is enabled you'll be able to head to your cart and select "Express Checkout" — this will take you directly to the "Review Order" page.</p>
-				<p>Items will be shipped to the default shipping address listed in your address book and charged to the payment method saved to your account.</p>
 				
-				</div>-->
-			
 			<div class="col-sm-12 col-md-6 col-md-offset-3">
 		<h2>How to enable Express Checkout</h2>
-		<ul>
-				
-				<li>&#183; Go to your My Account page on CostcoBusinessDelviery.com.</li>
-				<li>&#183; Under <a href="/AccountInformationView">Account details</a> enter you Costco Membership number and verify your membership.</li>
-			<li>&#183; Under <a href="/AddressBookDisplayView">Address Book</a>, set up a default billing address.</li>
-				<li>&#183; Also under <a href="/AddressBookDisplayView">Address Book</a>, set up a default shipping address.</li>
-				<li>&#183; Under <a href="/PaymentMethodDisplayView">Payment Methods</a>, set up a stored payment method</li>
-				</ul>
-				<br>	
+			<p>Express Checkout is available to the user if all of these conditions are met:</p>
+				<ul>
+					<li>&nbsp;&nbsp;&#183; Under <a href="/AddressBookDisplayView">Address Book</a>, a default billing address is on their account</li>
+					<li>&nbsp;&nbsp;&#183; Also under <a href="/AddressBookDisplayView">Address Book</a>, a default shipping address is on their account</li>
+					<li>&nbsp;&nbsp;&#183; Under <a href="/PaymentMethodDisplayView">Payment Methods</a>, a default payment method is on their account</li>
+				</ul>	
 		</div>
 		
 		
@@ -77,6 +67,7 @@
 	</div>
 	</div>
 <!-- Express Checkout END -->	
+
 	
 	</body>
 </html>
