--- a/index.html
+++ b/index.html
@@ -36,26 +36,25 @@
 	
 	<div class="row express-hero">
 		<div class="col-xs-6 col-xs-offset-3 text-center">
-		<h1><img src="https://mobilecontent.costco.com/live/resource/img/bd-expresscheckout/expresscheckout-web.svg" alt="Use Express Checkout toQuickly Place Orders Online!"></h1>
+		<h1><img src="https://mobilecontent.costco.com/live/resource/img/bd-expresscheckout/expresscheckout-web.svg" alt="Use Express Checkout to Quickly Place Orders Online!"></h1>
 		</div>
 		</div>
 		<div class="row express-about">
-				
+				<div class="col-sm-12 col-md-6 col-md-offset-3">
+		<p>Once <strong>Express Checkout</strong> is enabled, you can use it to skip directly to the "Review Order" page. Items will be shipped to the default shipping address and charged to the payment method saved to your account.</p></div>
 			<div class="col-sm-12 col-md-6 col-md-offset-3">
 		<h2>How to enable Express Checkout</h2>
-			<p>Express Checkout is available to the user if all of these conditions are met:</p>
+			<p>Express Checkout is available once all of these conditions are set-up on your account:</p>
 				<ul>
-					<li>&nbsp;&nbsp;&#183; Under <a href="/AddressBookDisplayView">Address Book</a>, a default billing address is on their account</li>
-					<li>&nbsp;&nbsp;&#183; Also under <a href="/AddressBookDisplayView">Address Book</a>, a default shipping address is on their account</li>
-					<li>&nbsp;&nbsp;&#183; Under <a href="/PaymentMethodDisplayView">Payment Methods</a>, a default payment method is on their account</li>
+					<li>1. Under <a href="/AddressBookDisplayView">Address Book</a>, a default Billing Address is set</li>
+					<li>2. Also under <a href="/AddressBookDisplayView">Address Book</a>, a default Shipping Address is set</li>
+					<li>3. Under <a href="/PaymentMethodDisplayView">Payment Methods</a>, a stored payment method is set</li>
 				</ul>	
 		</div>
 		
 		
 			
-		<div class="col-sm-12 col-md-6 col-md-offset-3">
-			<h2>   </h2>
-		<p>Once <strong>Express Checkout</strong> is enabled you can use it to skip directly to the "Review Order" page. Items will be shipped to the default shipping address and charged to the payment method saved to your account.</p></div>
+		
 		
 		
 		</div>
