--- a/index2.html
+++ b/index2.html
@@ -65,4 +65,101 @@
 	</div>
 <!-- Express Checkout END -->	
 
-	</body>
+	
+		<!-- Express Checkout START -->	
+	<style>
+		.express-hero {
+			padding-top: 20px;
+			background: green;
+		}
+		.express-hero h1 {
+			color: #fff;
+			padding: 20px 0;
+		}
+		.express-about {
+			margin-top: 30px;
+		}
+		.express-button {
+			margin: 20px 0;
+			max-width: 100%;
+			text-align: center;
+		}
+		@media (max-width: 800px) {
+			.express-button {
+				max-width: 90%;
+			}
+		}
+	</style>
+	
+	
+	<div class="container-fluid">
+	
+	<div class="row express-hero">
+		<div class="col-xs-6 col-xs-offset-3 text-center">
+		<h1><img src="https://mobilecontent.costco.com/live/resource/img/bd-expresscheckout/expresscheckout-web.svg" alt="Use Express Checkout to Quickly Place Orders Online!"></h1>
+		</div>
+		</div>
+		<div class="row express-about">
+				<div class="col-sm-12 col-md-6 col-md-offset-3">
+		<p>Once <strong>Express Checkout</strong> is enabled, you can use it to skip directly to the "Review Order" page. Items will be shipped to the default shipping address and charged to the payment method saved to your account.</p></div>
+			<div class="col-sm-12 col-md-6 col-md-offset-3">
+		<h2>How to enable Express Checkout</h2>
+			<p>Express Checkout is available once all of these conditions are set-up on your account:</p>
+				<ul>
+					<li>1. Select a default <strong>Billing Address</strong> on the <a href="/AddressBookDisplayView">Address Book</a> page.</li>
+					<li>2. Also select a default <strong>Shipping Address</strong> while on the <a href="/AddressBookDisplayView">Address Book</a> page.</li>
+					<li>3. Store a <strong>Payment Method</strong> in <a href="/PaymentMethodDisplayView">Payment Methods</a>.</li>
+				</ul>	
+			</div>
+		</div>
+	</div>
+<!-- Express Checkout END -->	
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<!-- Express Checkout START -->	
+	<style>
+		.express-hero {
+			padding-top: 20px;
+			background: green;
+		}
+		.express-hero h1 {
+			color: #fff;
+			padding: 20px 0;
+		}
+		.express-about {
+			margin-top: 30px;
+		}
+		.express-button {
+			margin: 20px 0;
+			max-width: 100%;
+			text-align: center;
+		}
+		@media (max-width: 800px) {
+			.express-button {
+				max-width: 90%;
+			}
+		}
+	</style>
+	
+	
+	<div class="container-fluid">
+	
+	<div class="row express-hero">
+		<div class="col-xs-6 col-xs-offset-3 text-center">
+		<h1><img src="https://mobilecontent.costco.com/live/resource/img/bd-expresscheckout/expresscheckout-web.svg" alt="Use Express Checkout to Quickly Place Orders Online!"></h1>
+		</div>
+		</div>
+		<div class="row express-about">
+				<div class="col-sm-12 col-md-6 col-md-offset-3">
+		<p>Once <strong>Express Checkout</strong> is enabled, you can use it to skip directly to the "Review Order" page. Items will be shipped to the default shipping address and charged to the payment method saved to your account.</p></div>
+			<div class="col-sm-12 col-md-6 col-md-offset-3">
+		<h2>How to enable Express Checkout</h2>
+			<p>Express Checkout is available once all of these conditions are set-up on your account:</p>
+				<ul>
+					<li>1. Select a default <strong>Billing Address</strong> on the <a href="/AddressBookDisplayView">Address Book</a> page.</li>
+					<li>2. Also select a default <strong>Shipping Address</strong> while on the <a href="/AddressBookDisplayView">Address Book</a> page.</li>
+					<li>3. Store a <strong>Method of Payment</strong> in <a href="/PaymentMethodDisplayView">Payment Methods</a>.</li>
+				</ul>	
+			</div>
+		</div>
+	</div>
+<!-- Express Checkout END -->	
